fix Swagger UI config; update fallbacks